+ [mysqlnd] do not display $strMysqlLibDiffersServerVersion if the client
  is mysqlnd
+ [webapp] experimental Mozilla Prism support
+ [export] new plugin "codegen" for NHibernate, thanks to caocao; I'm
  looking for a name more descriptive than codegen, taking into account
  that it might later support other formats like JSON in the same plugin
+ [lang] Finnish update, thanks to Jouni Kahkonen
+ [config] new parameter $cfg['CheckConfigurationPermissions'] 

2.11.4.0 (not yet released)
- bug #1843428 [GUI] Space issue with DROP/DELETE/ALTER TABLE
- bug #1807816 [search] regular expression search doesn't work with
  backslashes
- bug #1843463 [GUI] DROP PROCEDURE does not show alert
- bug #1835904 [GUI] Back link after a SQL error forgets the query
- bug #1835654 [core] wrong escaping when using double quotes

2.11.3.0 (2007-12-08)
- patch #1818389 to remove a notice (failed to flush buffer), thanks to
  Bertrand
- patch #1821154, HTTP authentication: fix auth working with php/mod_fastcgi,
  thanks to yarodin
- wrong default charset in case of broken session
- bug #1824506 [profiling] Profile command repeated on older MySQL servers
- bug #1825172 [export] Exporting and functions
- bug #1817224 [import] Incorrect detection of file_uploads in some cases,
  thanks to Juergen Wind
- bug #1777249 [display] Do not underline links in left panel (in default
  themes)
- bug #1826022 [privileges] unable to add user (MySQL 3.23) since PMA 2.11.2
- bug #1823045 [import] Error importing file with lowercase "delimiter"
- bug #1828913 [structure] Can't set FULLTEXT index on CHAR column
- bug #1804081 [export] export on server doesn't obey AllowAnyWhereRecoding
- bug #1789988 [display] space before SHOW COLUMNS
- bug #1831646 [table creation] Error in CREATE TABLE with multiple primary
  keys and AUTO_INCREMENT
- [display] Division by zero when showing all records (page selector)
- bug #1828265 [privileges] No weird characters in generated password