@@ -18,7 +18,8 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
   looking for a name more descriptive than codegen, taking into account
   that it might later support other formats like JSON in the same plugin
 + [lang] Finnish update, thanks to Jouni Kahkonen
-+ [config] new parameter $cfg['CheckConfigurationPermissions'] 
++ [config] new parameter $cfg['CheckConfigurationPermissions']
++ rfe #1775288 [transformation] proper display if IP-address stored as INT
 
 2.11.4.0 (not yet released)
 - bug #1843428 [GUI] Space issue with DROP/DELETE/ALTER TABLE
